fix(enketo): replace [hidden] with visibility CSS to fix widget rendering

--- a/webapp/src/css/inbox.less
+++ b/webapp/src/css/inbox.less
@@ -779,6 +779,13 @@ mm-analytics-filters {
   .action-icon {
     float: left;
   }
+
+}
+
+.content-loading {
+  visibility: hidden;
+  position: absolute;
+  z-index: -1;
 }
 
 .incomplete .body h2 {
